# Open-Source-ROS-2-Tool-for-Real-Time-Stereo-RGB-D-IMU-Streaming-for-SLAM-3D-Reconstruction

./: LICENSE  README.md  onnx_transformed.py
config/: oak_config.yml  oak_intrinsics.json
depthai_desc/: CMakeLists.txt  package.xml
depthai_desc/launch/: urdf_oak_launch.py
depthai_desc/urdf/: depthai_descr.urdf.xacro
depthai_oakdpro/: CMakeLists.txt  package.xml
depthai_oakdpro/launch/: depthai_oakdpro_cuda_node.launch.py
depthai_oakdpro/src/: depthai_oakdpro_cuda_node.cpp
